# xshot

./: .prettierignore  README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.zh-TW.md  RELEASE.md  index.html  package.json  pnpm-lock.yaml  prettier.config.js  vite.config.ts
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ocr.rs  translation.rs
src/logic/: cursor.ts  settings.ts  shortcut.ts  watermark.ts
src/windows/: Pin.tsx  Screenshot.tsx
