[package]
name = "xshot"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
xcap = "0.7.1"
image = "0.25.9"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "native-tls", "query", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2.7.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-graphics = "0.25.0"
foreign-types = "0.5.0"
objc2 = "0.6.1"
objc2-app-kit = { version = "0.3.1", features = ["NSWindow", "NSPanel", "NSEvent", "NSScreen", "NSWorkspace", "NSRunningApplication"] }
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-foundation = { version = "0.3.1", features = ["NSArray", "NSData", "NSDictionary", "NSError", "NSObject", "NSString"] }
objc2-vision = { version = "0.3.2", default-features = false, features = ["alloc", "std", "VNDetectBarcodesRequest", "VNObservation", "VNRecognizeTextRequest", "VNRequest", "VNRequestHandler", "VNTypes", "objc2-core-foundation"] }
